# lumen-argus

./: .env.example  .gitignore  .sonarcloud.properties  Dockerfile  Dockerfile.dev  README.md  RELEASE.md  benchmark.py  config-example.yaml  docker-compose.dev.yml  docker-compose.yml  landing.html  mkdocs.yml  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: binaries.yml  docker.yml  docs.yml  publish.yml  test.yml
docs/: index.md
docs/development/: changelog.md  contributing.md  extensions.md  releases.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: allowlists.md  client-detection.md  custom-rules.md  detection.md  proxy.md  scan-cli.md
docs/operations/: logging.md  monitoring.md  security.md
docs/reference/: api-endpoints.md  architecture.md  cli.md  config.md  dedup-layers.md  exit-codes.md  protection-env-file.md
lumen_argus/: __init__.py  __main__.py  actions.py  allowlist.py  async_proxy.py  audit.py  cli.py  clients.py  config.py  decoders.py  detect.py  display.py  extensions.py  extractor.py  log_utils.py  mcp_scanner.py  mcp_wrap.py  models.py  pipeline.py  policy.py  pool.py  provider.py  proxy.py  relay.py  response_scanner.py  rule_analysis.py  scanner.py  session.py  setup_wizard.py  stats.py  text_utils.py  validators.py  watch.py  ws_proxy.py
lumen_argus/analytics/: __init__.py  _db.py  allowlists.py  channels.py  config_overrides.py  findings.py  mcp_tool_lists.py  rule_analysis_repo.py  rules.py  store.py  ws_connections.py
lumen_argus/dashboard/: api.py  audit_reader.py  html.py  server.py  sse.py
lumen_argus/dashboard/static/: base.html  style.css
lumen_argus/dashboard/static/js/: core.js  dashboard.js  findings.js  init.js  pipeline.js  rules.js  settings.js
lumen_argus/detectors/: __init__.py  accelerator.py  custom.py  literal_extractor.py  pii.py  proprietary.py  rules.py  secrets.py
lumen_argus/mcp/: __init__.py  env_filter.py  proxy.py  scanner.py  transport.py
lumen_argus/notifiers/: dispatcher.py
lumen_argus/patterns/: pii_patterns.py  secrets_patterns.py
lumen_argus/rules/: community.json
scripts/: generate_build_info.py
tests/: helpers.py  test_accelerator.py  test_allowlist.py  test_allowlists_api.py  test_analytics_store.py  test_async_proxy.py  test_audit.py  test_block_strip.py  test_build_endpoint.py  test_cli_removed_subcommands.py  test_clients.py  test_community_notifiers.py  test_community_rules_quality.py  test_config.py  test_custom_detector.py  test_dashboard_layering.py  test_dashboard_server.py  test_database_adapter.py  test_decoders.py  test_dedup.py  test_detect.py  test_emit_findings.py  test_enrollment_repository.py  test_enrollment_tools.py  test_extension_hooks.py  test_extractor.py  test_framework_finding_origin.py  test_integration.py  test_literal_extractor.py  test_log_utils.py  test_mcp_integration.py  test_mcp_proxy_scanning.py  test_mcp_tool_approval_integration.py  test_mcp_tool_lists.py  test_mcp_wrap.py  test_module_boundaries.py  test_notice.py  test_notification_api.py  test_notification_channels.py  test_packaging.py  (+26 more)
tests/fixtures/: mcp_handler.py  mcp_http_server.py  mcp_stdio_server.py  mcp_ws_server.py
