[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-argus"
version = "0.1.0"
description = "AI coding tool DLP proxy — scan outbound requests for secrets, PII, and proprietary data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "lumen-argus contributors"},
]
keywords = ["dlp", "proxy", "ai", "security", "secrets", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Zero dependencies — Python stdlib only.
dependencies = []

[project.optional-dependencies]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]

[project.scripts]
lumen-argus = "lumen_argus.cli:main"

[project.urls]
Homepage = "https://github.com/slima4/lumen-argus"

[tool.setuptools.packages.find]
include = ["lumen_argus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
