[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lumen-argus"
version = "0.1.0"
description = "AI coding tool DLP proxy — scan outbound requests for secrets, PII, and proprietary data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "lumen-argus contributors"},
]
keywords = ["dlp", "proxy", "ai", "security", "secrets", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pyyaml>=6.0.1",
    "aiohttp>=3.9",
    "pyahocorasick>=2.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.10", "types-PyYAML>=6.0", "pre-commit>=3.7"]
docs = ["mkdocs>=1.5", "mkdocs-material>=9.0"]
rules-analysis = ["crossfire>=0.1.0"]

[project.scripts]
lumen-argus = "lumen_argus.cli:main"

[project.urls]
Homepage = "https://github.com/lumen-argus/lumen-argus"

[tool.setuptools.packages.find]
include = ["lumen_argus*"]

[tool.setuptools.package-data]
"lumen_argus" = ["py.typed"]
"lumen_argus.dashboard" = ["static/**/*"]
"lumen_argus.rules" = ["*.json"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "PIE", "PT", "RUF", "PERF", "I"]
ignore = ["PERF203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PT", "PERF401", "RUF003", "RUF005", "RUF015", "C401"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["lumen_argus"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "ahocorasick",
    "ahocorasick.*",
    "crossfire",
    "crossfire.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
