[project]
name = "lumen-argus-workspace"
version = "0.0.0"
description = "lumen-argus monorepo workspace"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
lumen-argus-core = { workspace = true }
lumen-argus-agent = { workspace = true }
lumen-argus-proxy = { workspace = true }

[dependency-groups]
dev = [
    "lumen-argus-core",
    "lumen-argus-agent",
    "lumen-argus-proxy",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pyinstaller>=6.19.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "C4", "PIE", "PT", "RUF", "PERF", "I"]
ignore = ["PERF203"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PT", "PERF401", "RUF003", "RUF005", "RUF015", "C401"]
"packages/*/tests/*" = ["PT", "PERF401", "RUF003", "RUF005", "RUF015", "C401"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["lumen_argus", "lumen_argus_core"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
mypy_path = "packages/core"

[[tool.mypy.overrides]]
module = [
    "ahocorasick",
    "ahocorasick.*",
    "crossfire",
    "crossfire.*",
    "lumen_argus_agent",
    "lumen_argus_agent.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "packages/core/tests", "packages/agent/tests"]
